--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               <div class="card-body">
                 <h5 class="card-title">Demon Slayer</h5>
                 <p class="card-text">Watch this great anime sries!</p>
-                <a href="#" class="btn btn-primary">Go to series</a>
+                <a href="Episodes.html" class="btn btn-primary">Go to series</a>
               </div>
             </div>
   
@@ -123,7 +123,7 @@
               <div class="card-body">
                 <h5 class="card-title">Naruto</h5>
                 <p class="card-text">Watch this great anime sries!</p>
-                <a href="#" class="btn btn-primary">Go to series</a>
+                <a href="Episodes.html" class="btn btn-primary">Go to series</a>
               </div>
             </div>
           </div>
