--- a/Episodes.html
+++ b/Episodes.html
@@ -71,10 +71,12 @@
               </div>
           </div>
 
-          <div class="card mb-3" style="max-width: 540px;">
+          <div class="card mb-3" >
             <div class="row g-0">
               <div class="col-md-4">
-                <img src="image/Card1.jpeg" class="img-fluid rounded-start" alt="...">
+                <!-- <img src="image/Card1.jpeg" class="img-fluid rounded-start" alt="..."> -->
+                <video width="100%" height="100%" controls>
+                    <source src="Videos/01 - Cruelty.mp4">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
