--- a/Episodes.html
+++ b/Episodes.html
@@ -76,7 +76,7 @@
               <div class="col-md-4">
                 <!-- <img src="image/Card1.jpeg" class="img-fluid rounded-start" alt="..."> -->
                 <video width="100%" height="100%" controls>
-                    <source src="Videos/01 - Cruelty.webm">
+                    <source src="Videos/01 - Cruelty.mp4">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
