--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
 	document.addEventListener("adobe_dc_view_sdk.ready", function(){ 
 		var adobeDCView = new AdobeDC.View({clientId: "1998dbc0da7947ada59d7b158ba98d69", divId: "adobe-dc-view"});
 		adobeDCView.previewFile({
-			content:{location: {url: "Modern Operating Systems (4th Edition) ( PDFDrive ).pdf"}},
+			content:{location: {url: "https://documentcloud.adobe.com/view-sdk-demo/PDFs/Bodea Brochure.pdf"}},
 			metaData:{fileName: "Bodea Brochure.pdf"}
 		}, {});
 	});
