--- a/test.html
+++ b/test.html
@@ -13,8 +13,8 @@
 	document.addEventListener("adobe_dc_view_sdk.ready", function(){ 
 		var adobeDCView = new AdobeDC.View({clientId: "Modern Operating Systems (4th Edition) ( PDFDrive ).pdf", divId: "adobe-dc-view"});
 		adobeDCView.previewFile({
-			content:{location: {url: "https://documentcloud.adobe.com/view-sdk-demo/PDFs/Bodea Brochure.pdf"}},
-			metaData:{fileName: "Bodea Brochure.pdf"}
+			content:{location: {url: "../"}},
+			metaData:{fileName: "Modern Operating Systems (4th Edition) ( PDFDrive ).pdf"}
 		}, {});
 	});
 </script>
